--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+svg path{
+    color: #57c4a3;
+    fill: #57c4a3;
+}
+
 
 [container_main]{
     height: 100vh;
@@ -25,7 +30,7 @@
     font-size: 24px;
     margin-bottom: 20px;
     font-weight: 600;
-    color: #63E6BE;
+    color: #57c4a3;
 }
 
 [input_box]{
@@ -50,7 +55,7 @@
     height: 100%;
     width: 110px;
     border-radius: 150px;
-    background: #63E6BE;
+    background: #57c4a3;
     font-weight: bold;
     color: #fff;
     cursor: pointer;
@@ -90,7 +95,7 @@
     text-decoration: line-through;
     font-style: italic;
 }
-[lists_container] .checked::before{
+[lists_container] li.checked::before{
     content: "";
     position: absolute;
     left: 0;
@@ -122,7 +127,95 @@
     background: #f1f1f1;
 }
 
-svg path{
-    color: #63E6BE;
-    fill: #63E6BE;
+
+
+
+[lists_container] .edit_list{
+    position: absolute;
+    display: block;
+    right: 45px;
+    top: 5px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-weight: bold;
+    color: #27ae60;
+    font-style: normal; 
+}
+[lists_container] .edit_list:hover{
+    background: #f1f1f1;
+}
+[lists_container] .edit_list> img{
+    height: 55%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* edit_List_Container */
+[edit_List_Container]{
+    position: fixed;
+    inset: 0;
+    height: 100vh;
+    width: 100%;
+    background: #00000071;
+    backdrop-filter: blur(20px);
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+[edit_List_Container] > div{
+    display: grid;
+    align-items: center;
+    align-content: center;
+    grid-gap: 10px 0px;
+    max-width: 520px;
+    padding: 40px 30px 20px;
+    background: #ffffff;
+    border-radius: 20px;
+}
+[edit_List_Container] > div h2{
+    font-size: 24px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #57c4a3;
+}
+[edit_List_Container] > div textarea{
+    padding: 7px 14px;
+    border-radius: 5px;
+    border: 2px solid rgb(206, 206, 206);
+    outline: none;
+    font-size: 17px;
+    width: 100%;
+    resize: none;
+}
+[edit_List_Container] > div button{
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: bold;
+    background: #57c4a3;
+    cursor: pointer;
+}
+[edit_List_Container] > div button:hover{
+    background: #57c4a3;
+}
+[edit_List_Container] > div a{
+    text-align: center;
 }
